View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] |
ID | Project | Category | View Status | Date Submitted | Last Update |
0029792 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2018-05-21 15:03 | 2020-09-14 22:53 |
|
Reporter | nbv | |
Assigned To | msv | |
Priority | normal | Severity | minor | |
Status | new | Resolution | open | |
Platform | | OS | | OS Version | |
Product Version | | |
Target Version | [OCCT] 7.6.0* | Fixed in Version | | |
|
Summary | 0029792: Add ::IsParallel method to GeomAPI_Extrema* classes |
Description | Currently almost all low-level extremas can return IsParallel status.
However, high-level (GeomAPI_Extrema*) classes do not process this flag and cannot return IsParallel() status at all.
E.g. see current implementation of "extrema" DRAW-command (GeometryTest_APICommands.cxx). "IsParallel" flag is read by the following method:
isInfinitySolutions = Ex.Extrema().IsParallel();
if (isInfinitySolutions)
{
...
instead of simple asking Ex.IsParallel(). |
Steps To Reproduce | Test case is not required. |
Additional information and documentation updates | This issue has come from the message 0029712:0076053. |
Tags | No tags attached. |
|
Test case number | |
|
Attached Files | |
|