src/GeomAPI/GeomAPI_ExtremaCurveCurve.hxx
@@ -125,6 +125,12 @@ Standard_EXPORT operator Standard_Integer() const;
   //! 1,NbExtrema ], where NbExtrema is the
   //! number of extrema computed by this algorithm.
   Standard_EXPORT Standard_Real Distance (const Standard_Integer Index) const;
+
+  //! Returns True if the two curves are parallel.
+  Standard_Boolean IsParallel() const
+  {
+    return myExtCC.IsParallel();
+  }
   
   //! Returns the points P1 on the first curve and P2 on
   //! the second curve, which are the ends of the shortest
