src/GeomAPI/GeomAPI_ExtremaCurveSurface.hxx
@@ -127,6 +127,12 @@ Standard_EXPORT operator Standard_Integer() const;
   //! 1,NbExtrema ], where NbExtrema is the
   //! number of extrema computed by this algorithm.
   Standard_EXPORT Standard_Real Distance (const Standard_Integer Index) const;
+
+  //! Returns True if the curve is on a parallel surface.
+  Standard_Boolean IsParallel() const
+  {
+    return myExtCS.IsParallel();
+  }
   
   //! Returns the points PC on the curve and PS on the
   //! surface, which are the ends of the shortest extremum computed by this algorithm.
